# WebReg-Auto-Enroller

./: .env.example  Cargo.toml  MULTIUSER_SETUP.md  README.md  WEB_README.md  config.toml  enrollment_stats.json
migrations/: 20250101000001_create_users.sql  20250101000002_create_jobs.sql  20250101000003_create_courses.sql  20250101000004_create_sections.sql  20250101000005_create_enrollment_stats.sql  20250101000006_create_notifications.sql
scripts/: generate_encryption_key.sh  setup_database.sh
src/: api.rs  auth.rs  config.rs  db.rs  encryption.rs  enroll.rs  job_manager.rs  main.rs  main2.rs  models.rs  monitor.rs  multi_user_api.rs  multi_user_state.rs  notifier.rs  state.rs  stats.rs  test_config.rs  utils.rs  web_main.rs  web_main_multiuser.rs  web_server.rs  webreg.rs
static/: index.html  multiuser.html
static/css/: multiuser.css  style.css
static/js/: app.js  multiuser.js
