[package]
name = "my_webreg_project"
version = "0.1.0"
edition = "2021"
default-run = "webreg-cli"

[[bin]]
name = "webreg-cli"
path = "src/main.rs"

[[bin]]
name = "webreg-web"
path = "src/web_main.rs"

[dependencies]
webweg = { version = "0.9.2", features = ["multi"] }
tokio = { version = "1.0", features = ["full"] }
lettre = { version = "0.10", features = ["tokio1", "tokio1-native-tls"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.10"
tokio-retry = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
