[package]
name = "my_webreg_project"
version = "0.1.0"
edition = "2021"
default-run = "webreg-cli"

[[bin]]
name = "webreg-cli"
path = "src/main.rs"

[[bin]]
name = "webreg-web"
path = "src/web_main.rs"

[[bin]]
name = "webreg-web-multiuser"
path = "src/web_main_multiuser.rs"

[dependencies]
webweg = { version = "0.9.2", features = ["multi"] }
tokio = { version = "1.0", features = ["full"] }
lettre = { version = "0.10", features = ["tokio1", "tokio1-native-tls"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.10"
tokio-retry = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Database support
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "migrate", "uuid", "chrono", "json"] }

# Authentication (Clerk JWT verification)
jsonwebtoken = "9.2"
base64 = "0.21"

# Encryption for storing sensitive data
aes-gcm = "0.10"
rand = "0.8"

# Environment variables
dotenv = "0.15"

# Async trait support
async-trait = "0.1"
